--- a/src/assets/site.css
+++ b/src/assets/site.css
@@ -1,57 +1,17 @@
-/* Extra small devices (phones, 600px and down) */
-@media only screen and (max-width: 600px) {
-    img {
-        width: 90%;
-        height: auto;
+:root {
+    /* scale for 1.2 */
+    --width-result-img: auto;
+    --height-result-img: 30vh;
+}
+
+img{
+        width: var(--width-result-img);
+        height: var(--height-result-img);
         margin: 5px;
         border: 1px solid #F4F4F4;
         border-radius: 2%;
-    }
 }
 
-/* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (min-width: 600px) {
-    img {
-        width: 90%;
-        height: auto;
-        margin: 5px;
-        border: 1px solid #F4F4F4;
-        border-radius: 2%;
-    }
-}
-
-/* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (min-width: 768px) {
-    img {
-        width: auto;
-        height: 30vh;
-        margin: 5px;
-        border: 1px solid #F4F4F4;
-        border-radius: 2%;
-    }
-}
-
-/* Large devices (laptops/desktops, 992px and up) */
-@media only screen and (min-width: 992px) {
-    img {
-        width: auto;
-        height: 20vh;
-        margin: 10px;
-        border: 1px solid #F4F4F4;
-        border-radius: 2%;
-    }
-}
-
-/* Extra large devices (large laptops and desktops, 1200px and up) */
-@media only screen and (min-width: 1200px) {
-    img {
-        width: auto;
-        height: 20vh;
-        margin: 10px;
-        border: 1px solid #F4F4F4;
-        border-radius: 2%;
-    }
-}
 
 body{
     background-color:#F4F4F4;
@@ -70,6 +30,7 @@ input::placeholder {
     color: #bebebe;
 }
 .app__body{
+    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: start;
@@ -80,9 +41,9 @@ input::placeholder {
 }
 .app__header{
     display: flex;
-    position: fixed;
-    top:5px;
-    margin: 0px;
+    align-items: center;
+    position: relative;
+    top: 10px;
     padding: 5px;
     border-radius: 5px;
     background: #F4F4F4;
@@ -102,7 +63,7 @@ input::placeholder {
 }
 .card__results{
     padding: 2px;
-    margin-top: 75px;
+    margin-top: 20px;
     background-color: #f2f3f7;
     display: flex;
     flex-wrap: wrap;
@@ -124,4 +85,14 @@ input::placeholder {
     padding: 20px;
     font-size: 1.2rem;
     font-weight: bold;
+}
+.simple__flex--row{
+    display: flex;
+    justify-content: space-between;
+}
+.simple__flex--column{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 1em;
 }
